fix: migliora contrasto testo sezione Recensioni su mobile

--- a/css/customFotona.css
+++ b/css/customFotona.css
@@ -823,7 +823,7 @@ label a:hover {
 
 	/* RECENSIONI */
 	.recensioni {
-		background: #F5F7F7;
+		background: #25475C;
 	}
 
 	.innerRecensioni {
